fixed mobile nav-bar activation and closing button from jumping to top of page on click

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     display: block;
     color: #ffffff;
     text-align: center;
-    padding: 17px 20px;
+    margin: 17px 20px;
     text-decoration: none;
     font-size: 20px;
     transition: 0.3s;
